--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -1,4 +1,6 @@
 spring.datasource.url=jdbc:h2:mem:testdb;Mode=Oracle
 spring.datasource.platform=h2
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.continue-on-error=true
+spring.h2.console.path=/h2
